--- a/preview/pr-3/contact/index.html
+++ b/preview/pr-3/contact/index.html
@@ -678,7 +678,7 @@ sed do eiusmod tempor</p>
 
 
   <div class="button-wrapper">
-    <a class="button" href="https://scholar.google.com/citations?user=ETJoidYAAAAJ" data-tooltip="Google Scholar" data-style="bare" aria-label="Google Scholar">
+    <a class="button" href="https://scholar.google.com/citations?user=AtFiBlgAAAAJ" data-tooltip="Google Scholar" data-style="bare" aria-label="Google Scholar">
       <i class="icon fa-brands fa-google"></i>
       
     </a>
@@ -693,7 +693,7 @@ sed do eiusmod tempor</p>
 
 
   <div class="button-wrapper">
-    <a class="button" href="https://github.com/https://github.com/Ding-Group" data-tooltip="GitHub" data-style="bare" aria-label="GitHub">
+    <a class="button" href="https://github.com/Ding-Group" data-tooltip="GitHub" data-style="bare" aria-label="GitHub">
       <i class="icon fa-brands fa-github"></i>
       
     </a>
