--- a/preview/pr-3/team/index.html
+++ b/preview/pr-3/team/index.html
@@ -707,7 +707,7 @@ nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p
 
 
   <div class="button-wrapper">
-    <a class="button" href="https://scholar.google.com/citations?user=ETJoidYAAAAJ" data-tooltip="Google Scholar" data-style="bare" aria-label="Google Scholar">
+    <a class="button" href="https://scholar.google.com/citations?user=AtFiBlgAAAAJ" data-tooltip="Google Scholar" data-style="bare" aria-label="Google Scholar">
       <i class="icon fa-brands fa-google"></i>
       
     </a>
@@ -722,7 +722,7 @@ nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p
 
 
   <div class="button-wrapper">
-    <a class="button" href="https://github.com/https://github.com/Ding-Group" data-tooltip="GitHub" data-style="bare" aria-label="GitHub">
+    <a class="button" href="https://github.com/Ding-Group" data-tooltip="GitHub" data-style="bare" aria-label="GitHub">
       <i class="icon fa-brands fa-github"></i>
       
     </a>
