Deploy preview for PR 6 🛫

--- a/preview/pr-6/404.html
+++ b/preview/pr-6/404.html
@@ -319,7 +319,7 @@
 
 
 
-<header class="background" style="--image: url('/preview/pr-6/images/background.jpg')" data-dark="true">
+<header class="background" style="--image: url('/preview/pr-6/images/background.png')" data-dark="true">
   <a href="/preview/pr-6/" class="home">
     
       <span class="logo">
