--- a/preview/pr-6/index.html
+++ b/preview/pr-6/index.html
@@ -369,7 +369,7 @@
 
 
 
-<header class="background" style="--image: url('/preview/pr-6/images/background.jpg')" data-dark="true" data-big>
+<header class="background" style="--image: url('/preview/pr-6/images/background.png')" data-dark="true" data-big>
   <a href="/preview/pr-6/" class="home">
     
       <span class="logo">
@@ -501,7 +501,7 @@
   
 
   <section class="background" data-size="page">
-    <h1 id="ding-groupdescriptionan-engaging-1-3-sentence-description-of-your-labs-website">Ding-GroupDESCRIPTION=An engaging 1-3 sentence description of your lab.’s Website</h1>
+    <h1 id="ding-groups-website">Ding-Group’s Website</h1>
   </section>
 
   
