Deploy preview for PR 7 🛫

--- a/preview/pr-7/projects/index.html
+++ b/preview/pr-7/projects/index.html
@@ -510,13 +510,13 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 <h2 id="featured">Featured</h2>
 
 <div class="card" data-style="">
-  <a href="https://github.com/" aria-label="scPhere" class="card-image">
+  <a href="https://github.com/Ding-Group/scPhere/" aria-label="scPhere" class="card-image">
     <img src="/preview/pr-7/images/tools/scPhere_thumbnail.jpg" alt="scPhere" loading="lazy" onerror="this.src = '/preview/pr-7/images/fallback.svg'; this.onerror = null;">
   </a>
 
   <div class="card-text">
     
-      <a href="https://github.com/" class="card-title">
+      <a href="https://github.com/Ding-Group/scPhere/" class="card-title">
         scPhere
     </a>
     
